crates/components/tests/snapshots/components__pins_cells_chart_zoom.snap
---
source: crates/components/tests/components.rs
expression: dump
---
[#cdd6f4/-/BOLD]ROG Astral RTX 5090 (variant)[#313244/-/NONE] · [#a6adc8/-/NONE]0000:01:00.0[#313244/-/NONE] · [#cdd6f4/-/NONE]PCIe Gen5×16[#313244/-/NONE] · [#a6adc8/-/NONE]i2c-3 @ 0x2b[-/-/NONE]                                                                                                                              
[#a6adc8/-/NONE]GPU [#cdd6f4/-/NONE]13%[#313244/-/NONE] · [#a6adc8/-/NONE]PWR [#a6e3a1/-/NONE]379/600W[#313244/-/NONE] · [#a6e3a1/-/NONE]44°C[#313244/-/NONE] · [#a6adc8/-/NONE]fan [#cdd6f4/-/NONE]28%[-/-/NONE]                                                                                                                                                                 
[#a6adc8/-/NONE]connector [#cdd6f4/-/NONE]9.1 A[#313244/-/NONE] · [#cdd6f4/-/NONE]110 W[#313244/-/NONE] · [#a6adc8/-/NONE]balance [#a6e3a1/-/NONE]1.26×[#313244/-/NONE] · [#a6adc8/-/NONE]pins 12.04–12.07 V[#313244/-/NONE] · [#a6adc8/-/NONE]samples 1[-/-/NONE]                                                                                                                                
[-/-/NONE]                                                                                                                     [#cdd6f4/-/NONE]9.1 A[#313244/-/NONE] · [#cdd6f4/-/NONE]110 W[#313244/-/NONE] · [#a6adc8/-/NONE]peak 110 W[#313244/-/NONE] · [#a6adc8/-/NONE]pins 12.04–12.07 V[-/-/NONE]                                    
[#f38ba8/-/NONE]┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄[-/-/NONE] [#a6adc8/-/NONE]balance[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]█[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]█[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#fac999/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE]1.26× NORMAL
[-/-/NONE]                                                                                                                                                  [#f38aa8/-/NONE]████████████████████[#f38da8/-/NONE]██[#f38aa8/-/NONE]█████[-/-/NONE]                           
[-/-/NONE]                                                                                                                       [#e0e2ba/-/NONE]▁▁▁▁▁▁▁▁▁▁[#e3e2b8/-/NONE]▁▁[#e0e2ba/-/NONE]▁▁[#e3e2b8/-/NONE]▁▁[#e0e2ba/-/NONE]▁▁▁▁▁▁▁▁▁▁▁[#f38aa8/-/NONE]████████████████████[#f38da8/-/NONE]██[#f38aa8/-/NONE]█████[#e0e2ba/-/NONE]▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁[#e3e2b8/-/NONE]▁▁[#e0e2ba/-/NONE]▁▁▁▁▁▁▁
[-/-/NONE]                                                                                                                       [#e0e2ba/-/NONE]██████████[#e3e2b8/-/NONE]██[#e0e2ba/-/NONE]██[#e3e2b8/-/NONE]██[#e0e2ba/-/NONE]███████████[#f38aa8/-/NONE]████████████████████[#f38da8/-/NONE]██[#f38aa8/-/NONE]█████[#e0e2ba/-/NONE]██████████████████[#e3e2b8/-/NONE]██[#e0e2ba/-/NONE]███████
[-/-/NONE]                                                                                                                     [#a6adc8/-/BOLD]log[-/-/NONE]                                                                                
[-/-/NONE]                                                                                                                     [#313244/-/NONE]  22.5s [#f38ba8/-/NONE]RAISED OVERLOAD pins 1+2 >9.2A[-/-/NONE]                                             
[-/-/NONE]                                                                                                                     [#313244/-/NONE]  51.0s [#a6e3a1/-/NONE]RESOLVED OVERLOAD clear after 28s[-/-/NONE]                                          
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                                                                                                                                                                                        
[#cdd6f4/-/NONE]▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔[-/-/NONE] [#cdd6f4/-/NONE]▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔[-/-/NONE]                                                                                                                                                                       
[#bbe2c8/-/NONE]████████████████[-/-/NONE] [#b7e2c9/-/NONE]████████████████[-/-/NONE] [#cdd6f4/-/NONE]▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔[-/-/NONE] [#cdd6f4/-/NONE]▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔[-/-/NONE] [#cdd6f4/-/NONE]▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔[-/-/NONE] [#cdd6f4/-/NONE]▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔[-/-/NONE]                                                                                                   
[#bbe2c8/-/NONE]████████████████[-/-/NONE] [#b7e2c9/-/NONE]████████████████[-/-/NONE] [#b7e2c9/-/NONE]████████████████[-/-/NONE] [#b4e2ca/-/NONE]████████████████[-/-/NONE] [#b4e2ca/-/NONE]████████████████[-/-/NONE] [#b1e2cc/-/NONE]████████████████[-/-/NONE]                                                                                                   
[#bbe2c8/-/NONE]████████████████[-/-/NONE] [#b7e2c9/-/NONE]████████████████[-/-/NONE] [#b7e2c9/-/NONE]████████████████[-/-/NONE] [#b4e2ca/-/NONE]████████████████[-/-/NONE] [#b4e2ca/-/NONE]████████████████[-/-/NONE] [#b1e2cc/-/NONE]████████████████[-/-/NONE]                                                                                                   
[#a6adc8/-/NONE]1                2                3                4                5                6               [-/-/NONE]                                                                                                   
[#a6adc8/-/NONE]p1 [#a6e3a1/-/NONE]1.7[#313244/-/NONE] [#a6adc8/-/NONE]p2 [#a6e3a1/-/NONE]1.7[#313244/-/NONE] [#a6adc8/-/NONE]p3 [#a6e3a1/-/NONE]1.5[#313244/-/NONE] [#a6adc8/-/NONE]p4 [#a6e3a1/-/NONE]1.5[#313244/-/NONE] [#a6adc8/-/NONE]p5 [#a6e3a1/-/NONE]1.4[#313244/-/NONE] [#a6adc8/-/NONE]p6 [#a6e3a1/-/NONE]1.3[-/-/NONE]                                                                                                                                                               
[#a6adc8/-/NONE]trend · 10 A ceiling · 60s[#313244/-/NONE]  [#89b4fa/-/NONE]p1[#313244/-/NONE] [#94e2d5/-/NONE]p2[#313244/-/NONE] [#cba6f7/-/NONE]p3[#313244/-/NONE] [#89dceb/-/NONE]p4[#313244/-/NONE] [#a6e3a1/-/NONE]p5[#313244/-/NONE] [#f9e2af/-/NONE]p6[-/-/NONE]                                                                                                                                                           
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                        [#f496a9/-/NONE]⣏⠵⠖⠒⠪⠭⠭⠵⠶[#f493a8/-/NONE]⠶⠶⠶⠶⠶⠶[#f496a9/-/NONE]⠶⠶⠶⣉⠵[#f493a8/-/NONE]⠒⠒⠒⠒⠒⠒[#f496a9/-/NONE]⠒⠒⠶⠶⠶⠶⠶⠶⠭[#f9d8ae/-/NONE]⢽[-/-/NONE]                                                                                                                            
[-/-/NONE]                                       [#f9d5ae/-/NONE]⢀[#f9d8ae/-/NONE]⡇[-/-/NONE]                                  [#f9d8ae/-/NONE]⢸⡀[-/-/NONE]                                                                                                                           
[-/-/NONE]                                       [#f9d8ae/-/NONE]⢸⠃[-/-/NONE]                                  [#f9d8ae/-/NONE]⠈⡇[-/-/NONE]                                                                                                                           
[-/-/NONE]                                       [#f9d8ae/-/NONE]⢸[-/-/NONE]                                    [#f9d8ae/-/NONE]⡇[-/-/NONE]                                                                                                                           
[-/-/NONE]                                       [#f9d8ae/-/NONE]⢸[-/-/NONE]                                    [#f9d8ae/-/NONE]⡇[-/-/NONE]                                                                                                                           
[#313244/-/NONE]───────────────────────────────────────[#f9d8ae/-/NONE]⡟[#313244/-/NONE]────────────────────────────────────[#f9d8ae/-/NONE]⢻[#313244/-/NONE]───────────────────────────────────────[-/-/NONE]                                                                                    
[-/-/NONE]                                       [#f9d8ae/-/NONE]⡇[-/-/NONE]                                    [#f9d8ae/-/NONE]⢸[-/-/NONE]                                                                                                                           
[-/-/NONE]                                       [#f9d8ae/-/NONE]⡇[-/-/NONE]                                    [#f9d8ae/-/NONE]⢸[-/-/NONE]                                                                                                                           
[-/-/NONE]                                      [#f9d8ae/-/NONE]⢰⠇[-/-/NONE]                                    [#f9d8ae/-/NONE]⠸⡆[-/-/NONE]                                                                                                                          
[-/-/NONE]                                      [#f9d8ae/-/NONE]⢸[-/-/NONE]                                      [#f9d8ae/-/NONE]⡇[-/-/NONE]                                                                                                                          
[-/-/NONE]                                      [#f9d8ae/-/NONE]⢸[-/-/NONE]                                      [#f9d8ae/-/NONE]⡇[-/-/NONE]                                                                                                                          
[#313244/-/NONE]──────────────────────────────────────[#f9d8ae/-/NONE]⡼[#313244/-/NONE]──────────────────────────────────────[#f9d8ae/-/NONE]⢧[#313244/-/NONE]──────────────────────────────────────[-/-/NONE]                                                                                    
[-/-/NONE]                                      [#f9d8ae/-/NONE]⡇[-/-/NONE]                                      [#f9d8ae/-/NONE]⢸[-/-/NONE]                                                                                                                          
[-/-/NONE]                                      [#f9d8ae/-/NONE]⡇[-/-/NONE]                                      [#f9d8ae/-/NONE]⢸[-/-/NONE]                                                                                                                          
[-/-/NONE]                                     [#f9d5ae/-/NONE]⢀[#f9d8ae/-/NONE]⡇[-/-/NONE]                                      [#f9d8ae/-/NONE]⢸⡀[-/-/NONE]                                                                                                                         
[-/-/NONE]                                     [#f9d8ae/-/NONE]⢸[-/-/NONE]                                        [#f9d8ae/-/NONE]⡇[-/-/NONE]                                                                                                                         
[-/-/NONE]                                     [#f9d8ae/-/NONE]⢸[-/-/NONE]                                        [#f9d8ae/-/NONE]⡇[-/-/NONE]                                                                                                                         
[#313244/-/NONE]─────────────────────────────────────[#f9d8ae/-/NONE]⢸[#313244/-/NONE]────────────────────────────────────────[#f9d8ae/-/NONE]⡇[#313244/-/NONE]─────────────────────────────────────[-/-/NONE]                                                                                    
[-/-/NONE]                                     [#f9d8ae/-/NONE]⡇[-/-/NONE]                                        [#f9d8ae/-/NONE]⢹[-/-/NONE]                                                                                                                         
[-/-/NONE]  [#b7e2c9/-/NONE]⣤⡤⠤⠤⢤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⡤⠤[#bbe2c8/-/NONE]⠤⠤⠤⠤⢤⣤⣤⡤⠤⠤⣤[#b7e2c9/-/NONE]⣤⣤⣤⣤⡤⠤[#f9d8ae/-/NONE]⠇[-/-/NONE]            [#b7e2c9/-/NONE]⢀⣀⣀⡀[-/-/NONE]        [#b7e2c9/-/NONE]⣀⣀⣀⣀⣀⣀[-/-/NONE]          [#b7e2c9/-/NONE]⢸⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⣤⠤⠤⠤⣤⣤⣤⠤[#bbe2c8/-/NONE]⠤⠤⠤⠤⠤⠤⠤⠤⣤[#b7e2c9/-/NONE]⣤⣤⣤⣤⣤⣤⣤[#bbe2c8/-/NONE]p1[-/-/NONE]                                                                                    
[-/-/NONE]  [#b4e2ca/-/NONE]⠛⠻⠿[#b1e2cc/-/NONE]⠿⠿⠿⠿⠿⠿⠿⠿⠿[#b4e2ca/-/NONE]⠿⠟⠛⠛⠻⠿⠿⠿⠿⠿⠿⠿⠿⠿⠿⠿⠛⠛⠛⠛⠛⠻⠿⠿⠟⠛[#b1e2cc/-/NONE]⠛⠻⠿⠿⠿⠿[#b4e2ca/-/NONE]⠿⠿⠿⠿⠿⠿⠿⠟⠛⠛⠛⠛⠛⠛⠛⠛⠿[#b1e2cc/-/NONE]⠿⠿⠿⠿⠿⠿⠿⠿⠿[#b4e2ca/-/NONE]⠿⠿⠿⠿⠿⠛⠛⠛⠿⠿⠿⠿⠿⠿⠛⠛⠻⠿⠿⠿⠿⠿⠿⠿⠿⠛⠛⠛⠿[#b1e2cc/-/NONE]⠿⠿⠿[#b4e2ca/-/NONE]⠿⠿⠛⠛⠛⠛⠛⠛⠿⠿[#b7e2c9/-/NONE]p3[-/-/NONE]                                                                                    
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]                                                                                                                                                                                                        
[-/-/NONE]
