crates/components/tests/snapshots/components__sensors_1x1_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(se.as_mut(), &history, &th, size)"
---
size: 17x8
tier: hottest
view:
  stack:
    children:
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: "spd5118 temp "
              - bold: true
                role: Text
                s: 41°
      - - Len(1)
        - gauge:
            gradient: Temp
            label: ""
            text: max 55°
            value: 0.7431818246841431
    dir: V
